<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchOptionsActivity" >

    <TextView
        android:id="@+id/tvAdvancedSearchOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/advanced_search_options"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvancedSearchOptions"
        android:layout_below="@+id/tvAdvancedSearchOptions"
        android:layout_marginTop="30dp"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageSize"
        android:entries="@array/image_size_arrays"
        android:singleLine="true"
        android:layout_marginTop="-25dp" />

    <TextView
        android:id="@+id/tvImageColor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvancedSearchOptions"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="20dp"
        android:text="@string/image_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sImageColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/tvImageColor"
        android:layout_toRightOf="@+id/tvImageColor"
        android:entries="@array/image_color_arrays"
        android:singleLine="true"
        android:layout_marginTop="-25dp" />

	<TextView
        android:id="@+id/tvImageType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvancedSearchOptions"
        android:layout_below="@+id/tvImageColor"
        android:layout_marginTop="20dp"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sImageType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/tvImageType"
        android:layout_toRightOf="@+id/tvImageType"
        android:entries="@array/image_type_arrays"
        android:singleLine="true"
        android:layout_marginTop="-25dp" />

    <TextView
        android:id="@+id/tvSiteSearch"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvancedSearchOptions"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="20dp"
        android:text="@string/site_search"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edSiteSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSiteSearch"
        android:layout_alignBottom="@+id/tvSiteSearch"
        android:layout_toRightOf="@+id/tvSiteSearch"
        android:hint="@string/site_search_hint"
        android:singleLine="true"
        android:ems="10">
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edSiteSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        android:onClick="onSave"
        />
    
</RelativeLayout>
