<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/query_hint"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onImageSearch"
        android:text="@string/search" />

    <!--
    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearch"
        android:numColumns="3" >
    </GridView>
	//
    -->

    <org.lucasr.smoothie.AsyncGridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearch"
        android:columnWidth="@dimen/image_width"
        android:horizontalSpacing="1dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
		android:listSelector="@null"
        android:verticalSpacing="1dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">
	    <Button
	        android:id="@+id/btnLoadMore"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="40dp"
	        android:onClick="onLoadMore"
	        android:text="@string/load_more"
	        android:visibility="gone" />
    </FrameLayout>
</RelativeLayout>